# miniRTOS

./: .gitignore  CMakeLists.txt  README.md  design.md
.github/workflows/: build.yml
apps/: CMakeLists.txt  main.c
apps/demo_blink/: main.c
apps/demo_tasks/: main.c
core/: CMakeLists.txt
core/config/: minirtos_config.h
core/logger/: logger.c  logger.h
core/scheduler/: scheduler.c  scheduler.h
docker/: Dockerfile
platform/: CMakeLists.txt  platform.h
platform/esp32/: platform_esp32.c
platform/linux/: platform_linux.c
platform/stm32/: platform_stm32.c
tests/: CMakeLists.txt  mock_platform.c  mock_platform.h  test_assert.h
tests/integration/: test_integration.c
tests/unit/: test_logger.c  test_scheduler.c
tools/: log_parser.py
